Update Basics of SQL - SELECT Statement.ipynb

--- a/DatabasesAndSQLForDataScienceWithPython/Basics of SQL - SELECT Statement.ipynb
+++ b/DatabasesAndSQLForDataScienceWithPython/Basics of SQL - SELECT Statement.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DB0201EN-SkillsNetwork/labs/Labs_Coursera_V5/labs/Lab%20-%20INSERT%20-%20UPDATE%20-%20DELETE/images/IDSNlogo.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Hands-on Lab : Basics of SQL SELECT Statement"
    ]
   },
